1. Added formatting for the on page button 2. Added a scroll bar to the extension when there are too many words 3. store lowercase letters only

--- a/manifest.json
+++ b/manifest.json
@@ -11,11 +11,11 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["save.js"]
+            "js": ["save.js"],
+            "css": ["save.css"]
         }
     ],
     "browser_action": {
-        // make an icon
         "default_popup":"popup.html"
     },
     "permissions": ["activeTab", "storage"]
