--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,6 @@
     "version": "1.0",
     "manifest_version": 2,
 
-    "background": {
-        "scripts": ["background.js"],
-        "persistent": false
-    },
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
@@ -16,7 +12,19 @@
         }
     ],
     "browser_action": {
-        "default_popup":"popup.html"
+        "default_popup":"popup.html",
+        "default_icons": {
+            "16": "image/icon_16.ico",
+            "32": "image/icon_32.ico",
+            "48": "image/icon_48.ico",
+            "128": "image/icon_128.ico"
+        }
+    },
+    "icons": {
+        "16": "image/icon_16.ico",
+        "32": "image/icon_32.ico",
+        "48": "image/icon_48.ico",
+        "128": "image/icon_128.ico"
     },
     "permissions": ["activeTab", "storage"]
 
